<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.ml</groupId>
	<artifactId>primenumbers</artifactId>
	<version>0.1.0</version>
	<packaging>jar</packaging>

	<name>prime numbers</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<javafx.version>14</javafx.version>
	</properties>

	<dependencies>

		<dependency>
		    <groupId>org.reflections</groupId>
		    <artifactId>reflections</artifactId>
		    <version>0.9.10</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>


		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
        <!--<finalName>${project.artifactId}-${project.version}</finalName>-->
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>1.6.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<mainClass>org.ml.primenumbers.PrimeNumbers</mainClass>
					<arguments>
						<argument>-gui</argument>
						<!--
						<argument>100000</argument>
						<argument>100000</argument>
						<argument>1</argument>
						<argument>ReducedWheel3</argument>
						-->
					</arguments>
				</configuration>
			</plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.2</version>
                <executions>
                    <execution>
                        <phase>generate-sources</phase>
                        <goals><goal>build-classpath</goal></goals>
                        <configuration>
                            <outputProperty>app.classpath</outputProperty>
                            <includeScope>runtime</includeScope>
                            <prefix>lib</prefix>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
                <configuration>
                    <descriptors>
                        <descriptor>/src/main/assembly/assembly.xml</descriptor>
                    </descriptors>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.4</version>
				<configuration>
					<mainClass>org.ml.primenumbers.gui.FxApp</mainClass>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
